# thesis

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
configs/: evaluation.yaml
configs/experiment/: biomistral7b.yaml  biomistral7b_slerp.yaml  qwen3_5_2b.yaml  qwen3_5_4b.yaml  qwen3_5_9b.yaml
configs/experiment/cove/: biomistral7b.yaml  biomistral7b_slerp.yaml  qwen3_5_2b.yaml  (+2 more)
configs/models/: biomistral_7b.yaml  biomistral_7b_slerp.yaml  qwen3_5_2b.yaml  qwen3_5_4b.yaml  qwen3_5_9b.yaml
configs/prompts/: baseline.yaml  cove_plan.yaml  cove_verify_refine.yaml  fewshot.yaml
data/processed/: golden_fewshot_examples.json
docs/: architecture.md  changelog.md  evaluation.md  experiments.md  known-issues.md  setup.md
notebooks/EDA/: 01_mimic_iv_ext_bhc_iv_eda.ipynb  02_cross_tokenizer_eda.py  02_cross_tokenizer_stats.csv  03_golden_dataset_eda.ipynb  03_golden_dataset_eda.py  README.md
requirements/: align.txt  main.txt  summac.txt
scripts/: download_gdrive.py  merge_faith_scores.py  preprocess_mimic_iv_bhc.py  run_evaluation.py  run_experiment.py  run_faithfulness.sh  setup_env.sh
src/: __init__.py
src/data/: __init__.py  base.py  mimic_bhc.py  schema.py
src/evaluation/: __init__.py  base.py
src/models/: __init__.py  base.py  factory.py  hf_model.py  ollama_model.py
src/pipelines/: __init__.py  evaluator.py  summarizer.py
src/prompts/: __init__.py  templates.py
src/techniques/: __init__.py  base.py  baseline.py  cove.py  fewshot.py
src/utils/: io.py  logging.py
tests/: test_data_loader.py  test_evaluation.py  test_model.py  test_schema.py
(+24 files in other folders)
