[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-clinical-summarization"
version = "0.1.0"
description = "Reducing Hallucinations in Clinical Text Summarization"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
